<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bunkin</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Explore</string>
    <string name="title_section3">Search</string>
    <string name="title_section4">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="loging_button_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_hint">yourname@domain.com</string>
    <string name="noFeed">No Feed Available</string>
    <string name="noHomeFeed">Home Feed Coming Soon..!</string>
    <string name="noProfileFeed">Profile Feed Coming Soon..!</string>
    <string name="noSearchFeed">Search View Coming Soon..!</string>
    <string name="searchHint">Search..!</string>
    <string name="noExploreFeed">Bunkin Explore Coming Soon..!</string>
    <string name="signup_error_msg">Please make sure you enter all the signup details.</string>
    <string name="signup_error_title">Signup Error</string>
    <string name="login_error_msg">Enter a valid username and password</string>
    <string name="login_error_title">Login Error</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_friends_label">Friends</string>
    <string name="title_activity_friends">Friends</string>
    <string name="error_title">Oops, sorry!</string>
    <string name="title_activity_user_friends">Friends</string>
    <string name="userFriends">Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="general_error">Oops, something went wrong</string>
    <string name="error_external_storage">There was a problem accessing your device external storage.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="file_size_warning">File size exceeded. Must be less than 10MB.</string>
    <string name="vide_file_size_warning">Video file size must be less than 10mb</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="compose">compose_status</string>
    <string name="title_activity_compose">Compose</string>
    <string name="compose_send">Send</string>
    <string name="whats_on_your_mind">What\'s on your mind?</string>

    <string-array name="status_choices">
        <item>Update Status</item>
        <item>Add a bunkin</item>
    </string-array>

    <string name="title_activity_create_bunkin">Create Bunkin</string>
    <string name="bunkin_name">Bunkin name</string>
    <string name="bunkin_details_hint">Details</string>
    <string name="bunkin_Location_hint">Location</string>
    <string name="bunkin_date_hint">Date</string>
    <string name="bunkin_time_hint">Time</string>
    <string name="action_settings_label">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="fb_connect">Connect with Facebook</string>
    <string name="title_activity_bunkin_event_detail">BunkinEventDetailActivity</string>

</resources>