<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jash.bunkin.SignupActivity" >

    <EditText
        android:id="@+id/signup_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:textColorHint="@color/white"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signup_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_userName"
        android:layout_below="@+id/signup_userName"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:hint="@string/password_hint" />

    <EditText
        android:id="@+id/signup_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_Password"
        android:layout_below="@+id/signup_Password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_Email"
        android:layout_below="@+id/signup_Email"
        android:layout_marginTop="24dp"
        android:text="@string/signup_text" />

</RelativeLayout>
